--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -5,9 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:label="Preferences"
+    android:windowSoftInputMode="adjustPan|adjustResize"
     tools:context="com.agh.wfiis.piase.inz.ui.activities.SettingsActivity">
 
     <FrameLayout
+        android:windowSoftInputMode="adjustPan|adjustResize"
         android:id="@+id/options"
         android:layout_width="368dp"
         android:layout_height="520dp"
@@ -19,5 +21,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"/>
+
+
 
 </android.support.constraint.ConstraintLayout>
