--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@color/white"
+    android:keepScreenOn="true"
     >
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
